bug fixes on small phone media query

--- a/src/app/AboutSection.module.css
+++ b/src/app/AboutSection.module.css
@@ -160,7 +160,7 @@
     }
   
     .skillsGrid {
-      grid-template-columns: 1fr; /* Single column for very small screens */
+      grid-template-columns: 2fr; 
     }
   
     .skillBox {
